Bug 1004669 - Fix leaks in MediaTaskQueue::Dispatch(). r=cpearce